--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,10 @@
 ---
 layout: default
-title: contact
+title: Contact
 ---
 
 
 <h2>Contact</h2>
 
+<p>Place some contact information for the group here</p>
 
