--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@ layout: default
 title: home
 ---
 
-Welcome
 
+<p>Place some welcome text here</p>
 
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
+<div class="content_summary">
+    <h3>Upcoming Events</h3>
+    {% for event in site.events %}
+        <div>
+            <h4><a href="{{ event.url }}">
+                {{ event.start }} - {{ event.title }}
+            </a></h4>
+        </div>
   {% endfor %}
-</ul>
+</div>
 
-
-<ul>
-{% for event in site.events %}
-  <li>
-    <a href="{{ event.url }}">
-      {{ event.start }} - {{ event.title }}
-    </a>
-  </li>
-{% endfor %}
-</ul>
+<div class="content_summary">
+    <h3>Recent Posts</h3>
+    {% for post in site.posts %}
+        <div>
+            <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
+            <div>{{ post.date | date: "%-d %B %Y" }}</div>
+        </div>
+    {% endfor %}
+</div>
