--- a/blogs.html
+++ b/blogs.html
@@ -7,7 +7,7 @@ title: Blogs
 <h2>Blogs</h2>
 
 {% for post in site.posts %}
-    <div>
+    <div class="blog_list_item">
         <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
         <div>{{ post.date | date: "%-d %B %Y" }}</div>
     </div>
