--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@ title: home
 
 <div class="content_summary">
     <h3>Recent Posts</h3>
-    {% for post in site.posts %}
-        <div>
+    {% assign recent_posts = site.posts|slice:0,3 %}
+    {% for post in recent_posts %}
+        <div class="blog_list_item">
             <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
             <div>{{ post.date | date: "%-d %B %Y" }}</div>
         </div>
     {% endfor %}
+    {% assign posts_length = site.posts|size %}
+    {% if posts_length > 3 %}
+        <div class="content_summary_more">
+            <a href="/blogs.html">More blogs</a>
+        </div>
+    {% endif %}
 </div>
