--- a/blogs.html
+++ b/blogs.html
@@ -8,7 +8,7 @@ title: Blogs
 
 {% for post in site.posts %}
     <div class="blog_list_item">
-        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <h3><a href="{{ post.url  | relative_url }}">{{ post.title }}</a></h3>
         <div>{{ post.date | date: "%-d %B %Y" }}</div>
     </div>
 {% endfor %}
