--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@ title: Events
 {% for event in event_list %}
     <div>
         <h4>
-            <a href="{{ event.url }}">
+            <a href="{{ event.url  | relative_url }}">
                 {{ event.start | date: "%l:%M%p %a %e %b %Y"  }}: {{ event.title }}
             </a>
         </h4>
