--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Welcome
             {% assign no_upcoming_events_found = false %}
             <div class="event_list_item">
                 <h4>
-                    <a href="{{ event.url }}">
+                    <a href="{{ event.url | relative_url }}">
                         {{ event.start | date: "%l:%M%p %a %e %b %Y" }}: {{ event.title }}
                     </a>
                 </h4>
@@ -33,14 +33,14 @@ title: Welcome
     {% assign recent_posts = site.posts|slice:0,3 %}
     {% for post in recent_posts %}
         <div class="blog_list_item">
-            <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
+            <h4><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h4>
             <div>{{ post.date | date: "%-d %B %Y" }}</div>
         </div>
     {% endfor %}
     {% assign posts_length = site.posts|size %}
     {% if posts_length > 3 %}
         <div class="content_summary_more">
-            <a href="/blogs.html">More blogs</a>
+            <a href="{{ site.baseurl }}/blogs.html">More blogs</a>
         </div>
     {% endif %}
 </div>
