Update instructions to get people started using this template

--- a/contact.html
+++ b/contact.html
@@ -6,5 +6,5 @@ title: Contact
 
 <h2>Contact</h2>
 
-<p>Place some contact information for the group here</p>
+<p>TOUSE: Place some contact information for the group here</p>
 
