--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Welcome
 ---
 
 
-<p>Place some welcome text here</p>
+<p>TOUSE: Place some welcome text here</p>
 
 <div class="content_summary">
     <h3>Upcoming Events</h3>
