Much layout and event tweaking

--- a/about.html
+++ b/about.html
@@ -8,3 +8,12 @@ title: About
 
 <p>TOUSE: Place some text about the group here</p>
 
+
+<div class="end-page-navigation">
+    <div>
+        {% include upcoming_events.html %}
+    </div>
+    <div>
+        {% include recent_blog_posts.html %}
+    </div>
+</div>
