--- a/contact.html
+++ b/contact.html
@@ -8,3 +8,12 @@ title: Contact
 
 <p>TOUSE: Place some contact information for the group here</p>
 
+
+<div class="end-page-navigation">
+    <div>
+        {% include upcoming_events.html %}
+    </div>
+    <div>
+        {% include recent_blog_posts.html %}
+    </div>
+</div>
