--- a/links.html
+++ b/links.html
@@ -12,3 +12,12 @@ title: Links
     </div>
 {% endfor %}
 
+
+<div class="end-page-navigation">
+    <div>
+        {% include upcoming_events.html %}
+    </div>
+    <div>
+        {% include recent_blog_posts.html %}
+    </div>
+</div>
