Blogs and Events have optional description that are used in listings

--- a/blogs.html
+++ b/blogs.html
@@ -15,7 +15,11 @@ title: Blogs
             </a>
         </h3>
         <div>
-            {{ post.content | strip_html | truncatewords: 100 }}
+            {% if post.description %}
+                {{ post.description }}
+            {% else %}
+                {{ post.content | strip_html | truncatewords: 50 }}
+            {% endif %}
         </div>
     </div>
 {% endfor %}
