--- a/events.all.html
+++ b/events.all.html
@@ -13,7 +13,11 @@ title: Events
             </a>
         </h4>
         <div>
-            {{ event.content | strip_html | truncatewords: 50 }}
+            {% if event.description %}
+                {{ event.description }}
+            {% else %}
+                {{ event.content | strip_html | truncatewords: 50 }}
+            {% endif %}
         </div>
     </div>
 {% endfor %}
